fix scrollbar margins, remove redux devtool

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,24 @@
-* {
-  overflow-x: hidden;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
+  font-family: 'Nunito Sans', sans-serif;
+  scrollbar-color: #4e3d6a #9784b5;
+  scrollbar-width: thin;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  /* position: relative; */
+
+  background-image: url('./img/background.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
