--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,15 +1,3 @@
-html,
-body {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
-  font-family: 'Nunito Sans', sans-serif;
-  /* scrollbar-color: #4e3d6a #9784b5;
-  scrollbar-width: thin; */
-}
-
 body {
   color: #4e3d6a;
 }
@@ -46,10 +34,10 @@ input:focus {
 
 main {
   padding-top: 100px;
-  background-image: url('../img/background.jpg');
+  /* background-image: url('../img/background.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .page-title {
