--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -2,7 +2,7 @@
   width: 100%;
   /* height: fit-content; */
   min-height: 600px;
-  padding: 20px 10px;
+  padding: 0 2em;
   overflow-y: scroll;
 }
 
