--- a/src/styles/moment.css
+++ b/src/styles/moment.css
@@ -4,7 +4,7 @@
   min-width: 100px;
   max-width: 100px;
   display: table-cell;
-  padding: 5px;
+  padding: 0 5px;
   text-align: center;
 }
 
